# OnlinePasswordManager

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  SPECIFICATIONS.md  data.db  data.sql  test.db
migrations/2021-06-03-095530_create_users/: up.sql
migrations/2021-06-11-115119_create_tokens/: up.sql
migrations/2021-12-07-141535_khape/: down.sql  up.sql
migrations/2021-12-07-174504_modify_token/: down.sql  up.sql
src/: main.rs
src/client/: action.rs  hash.rs  mod.rs  password.rs  user_interaction.rs
src/common/: encrypted_file.rs  error_message.rs  hash.rs  mod.rs  password_registry.rs  protected_registry.rs  totp.rs
src/server/: endpoint.rs  mod.rs  models.rs  repository.rs  schema.rs
src/server/authentication/: authenticator.rs  email.rs  mod.rs  password.rs  token.rs  totp.rs
