[package]
name = "online_password_manager"
version = "0.1.0"
authors = ["Julien Béguin <julien.beguin99@gmail.com>", "Gil Balsiger <gil.balsiger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/jul0105/curve25519-dalek.git" }


[dependencies]
khape = { version = "0.1.0", git = "https://github.com/jul0105/KHAPE.git" }
serde_json = "1.0"

rand = "0.8.3"
dotenv = "0.15.0"
structopt = "0.3.21"
dialoguer = "0.8.0"
console = "0.14.1"
diesel = { version = "1.4.6", features = ["sqlite", "chrono"] }
chrono = "0.4"
google-authenticator = "0.2.1"
qr_code = "1.1.0"
log = "0.4.14"
simplelog = "0.10.0"
base64 = "0.13.0"
sha3 = "0.9"
hkdf = "0.11"
strum = { version = "0.21", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.5.4"
sodiumoxide = "0.2.6"
zxcvbn = "2.1.1"
rand_core = { version = "0.6", features = ["std"] }
diesel_migrations = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
flate2 = "1.0.20"
